tests/baselines/reference/nodeModulesPackageImports(module=nodenext).errors.txt
error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
tests/cases/conformance/node/index.cts(3,22): error TS1471: Module '#mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/index.cts(4,23): error TS1471: Module '#type' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.


!!! error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== tests/cases/conformance/node/index.ts (0 errors) ====
    // esm format file
    import * as cjs from "#cjs";
    import * as mjs from "#mjs";
    import * as type from "#type";
    cjs;
    mjs;
    type;
==== tests/cases/conformance/node/index.mts (0 errors) ====
    // esm format file
    import * as cjs from "#cjs";
    import * as mjs from "#mjs";
    import * as type from "#type";
    cjs;
    mjs;
    type;
==== tests/cases/conformance/node/index.cts (2 errors) ====
    // esm format file
    import * as cjs from "#cjs";
    import * as mjs from "#mjs";
                         ~~~~~~
!!! error TS1471: Module '#mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as type from "#type";
                          ~~~~~~~
!!! error TS1471: Module '#type' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    cjs;
    mjs;
    type;
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": "./index.js",
        "imports": {
            "#cjs": "./index.cjs",
            "#mjs": "./index.mjs",
            "#type": "./index.js"
        }
    }